--- a/a.css
+++ b/a.css
@@ -1,11 +1,19 @@
 body {
-    background: #000;
-    color:white;
+    background: #EFEFEF;
     margin: 0;
 }
 a {
     color: inherit;
     text-decoration: none;
+}
+* {
+    margin: 0;
+    padding: 0;
+}
+hr {
+    height: 0;
+    border: none;
+    border-top: 1px solid #DEDEDE;
 }
 .clearfix::after {
     content:'';
@@ -13,21 +21,28 @@ a {
     clear: both;
 }
 .topNavBar {
-    padding: 20px 16px 20px 16px;
+    padding: 20px 0 20px 0;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
 }
-.topNavBar > nav {
+.topNavBar-inner {
+    padding: 0 16px;
+}
+.topNavBar nav {
     padding-top: 7px;
 }
-.topNavBar > nav > ul {
+.topNavBar nav > ul {
     list-style: none; 
     margin: 0; padding: 0; 
 }
-.topNavBar > nav > ul > li {
+.topNavBar nav > ul > li {
     float: left;
     margin-left: 17px;
     margin-right: 17px;
 }
-.topNavBar > nav > ul > li > a {
+.topNavBar nav > ul > li > a {
     font-size: 12px;
     color: #B7B7B7;
     text-decoration: none;
@@ -38,7 +53,7 @@ a {
     padding-bottom: 5px;
     display: block;
 }
-.topNavBar > nav > ul > li > a:hover {
+.topNavBar nav > ul > li > a:hover {
     border-bottom: 3px solid #e06567;
 }
 .topNavBar .logo {
@@ -53,4 +68,93 @@ a {
 }
 .topNavBar .logo .card {
     color: #9a9da2;
+}
+.banner {
+    height: 515px;
+    background-image: url(./img/rs-cover-2-2-1-1.jpg);
+    background-position: center center;
+    background-size: cover;
+}
+.banner .mask {
+    height: 515px;
+    background-color: rgba(0, 0, 0, 0.8);
+    
+}
+.userCard {
+    border: 1px solid red;
+    max-width: 940px;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: #FFF;
+}
+.userCard .welcome {
+    background: #E8676B;
+    color: #FFFFFF;
+    display: inline-block;
+    padding: 4px 16px;
+    line-height: 22px;
+    position: relative;
+    margin-bottom: 10px;
+}
+.userCard .welcome .triangle {
+    display: block;
+    border: 10px solid transparent;
+    widows: 0px;
+    border-left-color: #E6686A;
+    border-top-width: 0px;
+    position: absolute;
+    left: 4px;
+    top: 100%;
+}
+.userCard .picture {
+    float: left;
+}
+.userCard .text {
+    float: left;
+    margin-left: 65px;
+    width: 470px;
+}
+.userCard .text h1 {
+    margin-top: 18px;
+}
+.userCard .text hr {
+    margin: 20px 0;
+}
+.userCard .pictureAndText {
+    padding: 50px;
+}
+.userCard dl dt,
+.userCard dl dd {
+    float: left;
+    padding: 5px 0;
+}
+.userCard dl dt {
+    width: 30%;
+    font-weight: bold;
+}
+.userCard dl dd {
+    width: 70%;
+    color: #9da0a7;
+}
+.userCard > footer.media {
+    background: #E8676B;
+    text-align: center;
+}
+.userCard > footer.media > a {
+    /* border: 1px solid black; */
+    display: inline-block;
+    width: 40px;
+    padding: 5px 0;   /*不写height加好办了*/
+    line-height: 30px;
+    border-radius: 50%;
+    margin: 16px;
+}
+.userCard > footer.media > a:hover {
+    background: #CF5D5F;
+}
+.userCard svg {
+    width: 30px;
+    height: 30px;
+    fill: white;
+    vertical-align: top;
 }
