--- a/a.css
+++ b/a.css
@@ -2,30 +2,37 @@ body {
     background: #EFEFEF;
     margin: 0;
 }
+
 a {
     color: inherit;
     text-decoration: none;
 }
+
 * {
     margin: 0;
     padding: 0;
 }
+
 hr {
     height: 0;
     border: none;
     border-top: 1px solid #DEDEDE;
 }
-ul,ol {
+
+ul, ol {
     list-style: none;
 }
-h1,h2,h3,h4,h5,h6 {
+
+h1, h2, h3, h4, h5, h6 {
     font-weight: normal;
 }
+
 .clearfix::after {
-    content:'';
+    content: '';
     display: block;
     clear: both;
 }
+
 .topNavBar {
     padding: 20px 0 20px 0;
     position: fixed;
@@ -33,21 +40,27 @@ h1,h2,h3,h4,h5,h6 {
     left: 0;
     width: 100%;
 }
+
 .topNavBar-inner {
     padding: 0 16px;
 }
+
 .topNavBar nav {
     padding-top: 7px;
 }
+
 .topNavBar nav > ul {
-    list-style: none; 
-    margin: 0; padding: 0; 
+    list-style: none;
+    margin: 0;
+    padding: 0;
 }
+
 .topNavBar nav > ul > li {
     float: left;
     margin-left: 17px;
     margin-right: 17px;
 }
+
 .topNavBar nav > ul > li > a {
     font-size: 12px;
     color: #B7B7B7;
@@ -59,40 +72,48 @@ h1,h2,h3,h4,h5,h6 {
     padding-bottom: 5px;
     display: block;
 }
+
 .topNavBar nav > ul > li > a:hover {
     border-bottom: 3px solid #e06567;
 }
+
 .topNavBar .logo {
     font-size: 24px;
     font-family: "Arial Black";
     padding-top: 3px;
     padding-bottom: 4px;
 }
+
 .topNavBar .logo .rs {
     margin-right: 4px;
     color: #E6686A;
 }
+
 .topNavBar .logo .card {
     color: #9a9da2;
 }
+
 .banner {
     height: 515px;
     background-image: url(img/rs-cover-2-2-1-1.jpg);
     background-position: center center;
     background-size: cover;
 }
+
 .banner .mask {
     height: 515px;
     background-color: rgba(0, 0, 0, 0.8);
-    
+
 }
+
 .userCard {
     max-width: 940px;
     margin-left: auto;
     margin-right: auto;
     background-color: #FFF;
-    box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.5);
+    box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.5);
 }
+
 .userCard .welcome {
     background: #E8676B;
     color: #FFFFFF;
@@ -102,6 +123,7 @@ h1,h2,h3,h4,h5,h6 {
     position: relative;
     margin-bottom: 10px;
 }
+
 .userCard .welcome .triangle {
     display: block;
     border: 10px solid transparent;
@@ -112,65 +134,80 @@ h1,h2,h3,h4,h5,h6 {
     left: 4px;
     top: 100%;
 }
+
 .userCard .picture {
     float: left;
 }
+
 .userCard .text {
     float: left;
     margin-left: 65px;
     width: 470px;
 }
+
 .userCard .text h1 {
     margin-top: 18px;
 }
+
 .userCard .text hr {
     margin: 20px 0;
 }
+
 .userCard .pictureAndText {
     padding: 50px;
 }
+
 .userCard dl dt,
 .userCard dl dd {
     float: left;
     padding: 5px 0;
 }
+
 .userCard dl dt {
     width: 30%;
     font-weight: bold;
 }
+
 .userCard dl dd {
     width: 70%;
     color: #9da0a7;
 }
+
 .userCard > footer.media {
     background: #E8676B;
     text-align: center;
 }
+
 .userCard > footer.media > a {
     /* border: 1px solid black; */
     display: inline-block;
     width: 40px;
-    padding: 5px 0;   /*不写height加好办了*/
+    padding: 5px 0; /*不写height加好办了*/
     line-height: 30px;
     border-radius: 50%;
     margin: 16px;
 }
+
 .userCard > footer.media > a:hover {
     background: #CF5D5F;
 }
+
 .userCard svg {
     width: 30px;
     height: 30px;
     fill: white;
     vertical-align: top;
 }
+
 body > main {
     margin-top: -340px;
 }
-body > main  .downloadResume-wrapper {
+
+body > main .downloadResume-wrapper {
     text-align: center;
 }
-body > main  .downloadResume {
+
+body > main .downloadResume {
     display: inline-block;
     font-size: 14px;
     line-height: 16px;
@@ -183,9 +220,11 @@ body > main  .downloadResume {
     margin: 32px 0;
     transition: box-shadow 0.2s;
 }
-body > main  .downloadResume:hover {
-    box-shadow: 0px 4px 13px 0px rgba(0,0,0,0.2);
+
+body > main .downloadResume:hover {
+    box-shadow: 0px 4px 13px 0px rgba(0, 0, 0, 0.2);
 }
+
 .selfIntroduction {
     max-width: 940px;
     margin-left: auto;
@@ -196,6 +235,7 @@ body > main  .downloadResume:hover {
     font-size: 18px;
     /* font-weight: bold; */
 }
+
 section.skills,
 section.portfolio {
     max-width: 940px;
@@ -203,6 +243,7 @@ section.portfolio {
     margin-right: auto;
     margin-top: 60px;
 }
+
 section.skills > h2,
 section.portfolio > h2 {
     color: #3d4451;
@@ -211,60 +252,72 @@ section.portfolio > h2 {
     font-weight: 600;
     text-align: center;
 }
+
 section.skills h3 {
     font-size: 14px;
     line-height: 1.1;
     padding-right: 40px;
 }
+
 section.skills > ol {
     background: white;
-    box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.5);
+    box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.5);
     padding: 42px 50px 10px;
     margin-top: 30px;
 }
+
 section.skills > ol > li {
     float: left;
     width: 48%;
     box-sizing: border-box;
 }
+
 section.skills > ol > li:nth-child(even) {
     float: right;
 }
+
 section.skills .progressBar {
     height: 5px;
     background: #FAE1E1;
     border-radius: 2px;
     margin: 4px 0 40px 0;
 }
+
 section.skills .progressBar > .progress {
     height: 100%;
     background: #E6686A;
     width: 70%;
     border-radius: 2px;
 }
+
 section.portfolio {
     text-align: center;
     margin-bottom: 100px;
 }
+
 section.portfolio > nav {
     display: inline-block;
     text-align: center;
     vertical-align: top;
     margin-top: 32px;
 }
+
 section.portfolio > nav > ol {
-   margin: 0 auto;
-   display: inline-block;
-   vertical-align: top;
+    margin: 0 auto;
+    display: inline-block;
+    vertical-align: top;
 }
+
 section.portfolio > nav > ol > li {
     float: left;
     margin-left: 40px;
     cursor: pointer;
 }
+
 section.portfolio > nav > ol > li:first-child {
     margin-left: 0;
 }
+
 section.portfolio > nav .bar {
     height: 5px;
     background: #fff;
@@ -272,28 +325,74 @@ section.portfolio > nav .bar {
     margin-bottom: 28px;
     border-radius: 2px;
 }
+
 section.portfolio > nav .bar-inner {
     height: 100%;
     background: #E6686A;
     border-radius: 2px;
     transition: all 0.3s;
 }
+
 section.portfolio > nav .bar.state-1 .bar-inner {
     margin-left: 0px;
     width: 50px;
 }
+
 section.portfolio > nav .bar.state-2 .bar-inner {
     margin-left: 65px;
     width: 50px;
 }
+
 section.portfolio > nav .bar.state-3 .bar-inner {
     margin-left: 147px;
     width: 96px;
 }
+
 section.portfolio .works {
     position: relative;
 }
+
 section.portfolio .works > .big,
 section.portfolio .works > .small {
     position: absolute;
+}
+
+.loading {
+    width: 200px;
+    height: 200px;
+    border: 1px solid red;
+    vertical-align: center;
+    position: relative;
+}
+
+.loading::before, .loading::after {
+    content: '';
+    width: 0px;
+    height: 0px;
+    background: black;
+    border-radius: 50%;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    animation: s 1s linear infinite;
+}
+
+.loading::after {
+    animation-delay: 0.75s;
+}
+
+@keyframes s {
+    0% {
+        width: 0;
+        height: 0;
+        opacity: 1;
+    }
+    100% {
+        width: 100px;
+        height: 100px;
+        opacity: 0;
+    }
 }
