--- a/main.css
+++ b/main.css
@@ -39,6 +39,16 @@ h1, h2, h3, h4, h5, h6 {
     top: 0;
     left: 0;
     width: 100%;
+    transition: all 0.5s;
+    z-index: 1;
+    color: #B7B7B7;
+}
+
+.topNavBar.sticky {
+    background: white;
+    padding: 10px 0;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
+    color: #3d4451;
 }
 
 .topNavBar-inner {
@@ -46,7 +56,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .topNavBar nav {
-    padding-top: 7px;
+    padding-top: 5px;
 }
 
 .topNavBar nav > ul {
@@ -59,11 +69,12 @@ h1, h2, h3, h4, h5, h6 {
     float: left;
     margin-left: 17px;
     margin-right: 17px;
+    position: relative;
 }
 
 .topNavBar nav > ul > li > a {
     font-size: 12px;
-    color: #B7B7B7;
+    color: inherit;
     text-decoration: none;
     font-weight: bold;
     border-top: 3px solid transparent;
@@ -71,12 +82,56 @@ h1, h2, h3, h4, h5, h6 {
     padding-top: 5px;
     padding-bottom: 5px;
     display: block;
+    position: relative;
 }
 
-.topNavBar nav > ul > li > a:hover {
-    border-bottom: 3px solid #e06567;
-}
+.topNavBar nav > ul > li.active > a::after {
+    content: '';
+    display: inline-block;
+    position: absolute;
+    top:100%;
+    left: 0;
+    width: 100%;
+    background: #e06567;
+    height: 3px;
+    animation: menuSlide 0.3s;
 
+}
+@keyframes menuSlide {
+    0% {
+        width: 0;
+    }
+    100% {
+        width: 100%;
+    }
+}
+.topNavBar .submenu {
+    display: none;
+    position: absolute;
+    right: 0;
+    top: 100%;
+    background: white;
+    color: #3d4451;
+    box-shadow: 0 0 5px rgba(0,0,0,0.5);
+    cursor: pointer;
+}
+.topNavBar li.active > .submenu {
+    display: block;
+    animation: submenuSlide 0.3s;
+}
+@keyframes submenuSlide {
+    0% {
+        margin-right: 100%;   /*自己多试试别的属性*/
+    }
+    100% {
+        margin-right: 0%;
+    }
+
+}
+.topNavBar .submenu > li {
+    white-space: nowrap;
+    padding: 5px 10px;
+}
 .topNavBar .logo {
     font-size: 24px;
     font-family: "Arial Black";
