添加highlight特效，添加li slide特效，添加skills特效

--- a/main.css
+++ b/main.css
@@ -33,6 +33,24 @@ h1, h2, h3, h4, h5, h6 {
     clear: both;
 }
 
+[data-x].active {
+    outline: 1px solid red;
+}
+[data-x].offset{
+    transform:translateY(100px);
+}
+[data-x]{
+    transform:translateY(0);
+    transition: all 0.5s;
+}
+@keyframes slideUp {
+    0% {
+        transform: translateY(-100px);
+    }
+    100% {
+        transform: translateY(0);
+    }
+}
 .topNavBar {
     padding: 20px 0 20px 0;
     position: fixed;
@@ -85,7 +103,8 @@ h1, h2, h3, h4, h5, h6 {
     position: relative;
 }
 
-.topNavBar nav > ul > li.active > a::after {
+.topNavBar nav > ul > li.active > a::after,
+.topNavBar nav > ul > li.highlight > a::after{
     content: '';
     display: inline-block;
     position: absolute;
@@ -336,6 +355,7 @@ section.skills .progressBar {
     background: #FAE1E1;
     border-radius: 2px;
     margin: 4px 0 40px 0;
+    overflow: hidden;
 }
 
 section.skills .progressBar > .progress {
@@ -343,6 +363,11 @@ section.skills .progressBar > .progress {
     background: #E6686A;
     width: 70%;
     border-radius: 2px;
+    transform: translateX(0);
+    transition: all 1s;
+}
+section.skills.offset .progress {
+    transform: translateX(-100%);
 }
 
 section.portfolio {
