--- a/main.css
+++ b/main.css
@@ -373,68 +373,32 @@ section.skills.offset .progress {
 section.portfolio {
     text-align: center;
     margin-bottom: 100px;
+    max-width: 720px;
 }
 
-section.portfolio > nav {
-    display: inline-block;
-    text-align: center;
-    vertical-align: top;
-    margin-top: 32px;
+section.portfolio h2 {
+    margin-bottom: 32px;
 }
 
-section.portfolio > nav > ol {
-    margin: 0 auto;
-    display: inline-block;
-    vertical-align: top;
-}
 
-section.portfolio > nav > ol > li {
-    float: left;
-    margin-left: 40px;
-    cursor: pointer;
+section.portfolio .swiper-container {
+    width: 668px;
+    height: 501px;
 }
-
-section.portfolio > nav > ol > li:first-child {
-    margin-left: 0;
+section.portfolio .swiper-button-prev,
+section.portfolio .swiper-button-next {
+    background-color: white;
+    width: 64px;
+    height: 64px;
+    right:100%;
+    left:auto;
+    border-radius:50%;
 }
+section.portfolio .swiper-button-next {
 
-section.portfolio > nav .bar {
-    height: 5px;
-    background: #fff;
-    margin-top: 5px;
-    margin-bottom: 28px;
-    border-radius: 2px;
-}
+    left:100%;
+    right:auto;
 
-section.portfolio > nav .bar-inner {
-    height: 100%;
-    background: #E6686A;
-    border-radius: 2px;
-    transition: all 0.3s;
-}
-
-section.portfolio > nav .bar.state-1 .bar-inner {
-    margin-left: 0px;
-    width: 50px;
-}
-
-section.portfolio > nav .bar.state-2 .bar-inner {
-    margin-left: 65px;
-    width: 50px;
-}
-
-section.portfolio > nav .bar.state-3 .bar-inner {
-    margin-left: 147px;
-    width: 96px;
-}
-
-section.portfolio .works {
-    position: relative;
-}
-
-section.portfolio .works > .big,
-section.portfolio .works > .small {
-    position: absolute;
 }
 
 .loading {
