--- a/main.css
+++ b/main.css
@@ -43,6 +43,7 @@ h1, h2, h3, h4, h5, h6 {
     transform:translateY(0);
     transition: all 0.5s;
 }
+
 @keyframes slideUp {
     0% {
         transform: translateY(-100px);
@@ -50,6 +51,13 @@ h1, h2, h3, h4, h5, h6 {
     100% {
         transform: translateY(0);
     }
+}
+.icon {
+    width: 1em;
+    height: 1em;
+    vertical-align: -0.15em;
+    fill: currentColor;
+    overflow: hidden;
 }
 .topNavBar {
     padding: 20px 0 20px 0;
