--- a/main.css
+++ b/main.css
@@ -327,6 +327,7 @@ section.portfolio {
 }
 
 section.skills > h2,
+section.message > h2,
 section.portfolio > h2 {
     color: #3d4451;
     font-size: 34px;
@@ -409,10 +410,13 @@ section.portfolio .swiper-button-next {
 
 }
 
-.loading {
-    width: 200px;
-    height: 200px;
-    vertical-align: center;
-    position: relative;
+section.message > ol {
+    max-width: 700px;
+    margin:0 auto;
+    border-top: 1px solid #DDD;
+}
+section.message > ol > li {
+    padding: 16px;
+    border-bottom: 1px solid #DDD;
 }
 
