--- a/main.css
+++ b/main.css
@@ -84,9 +84,15 @@ img {max-width:100%;}
 
 .topNavBar-inner {
     padding: 0 16px;
-    display:flex;
-    flex-direction: column;
-    align-items: center;
+    /*display:flex;*/
+    /*flex-direction: column;*/
+    /*align-items: center;*/
+}
+.topNavBar-inner .menu {
+    float:right;
+}
+.topNavBar-inner .logo {
+    float:left;
 }
 
 .topNavBar nav {
@@ -101,13 +107,13 @@ img {max-width:100%;}
 
 .topNavBar nav > ul > li {
     float: left;
-    margin-left: 17px;
-    margin-right: 17px;
+    margin-left: 30px;
+    margin-right: 30px;
     position: relative;
 }
 
 .topNavBar nav > ul > li a {
-    font-size: 12px;
+    font-size: 18px;
     color: inherit;
     text-decoration: none;
     font-weight: bold;
@@ -233,6 +239,9 @@ img {max-width:100%;}
 .userCard .picture {
     float: left;
 }
+.userCard .picture img {
+    background-attachment: cover;
+}
 
 .userCard .text {
     float: left;
@@ -297,11 +306,14 @@ img {max-width:100%;}
 }
 
 body > main {
-    margin-top: -340px;
+    margin-top: -370px;
+    padding-bottom:60px;
 }
 
 body > main .downloadResume-wrapper {
-    text-align: center;
+    position:absolute;
+    top:-30px;
+    right:0;
 }
 
 body > main .downloadResume {
@@ -309,8 +321,6 @@ body > main .downloadResume {
     font-size: 14px;
     line-height: 16px;
     padding: 21px 55px;
-    border: 1px solid #CDCFD1;
-    background: #EFEFEF;
     border-radius: 2px;
     color: #3d4451;
     font-weight: bold;
@@ -319,6 +329,8 @@ body > main .downloadResume {
 }
 
 body > main .downloadResume:hover {
+    background: #EFEFEF;
+    border: 1px solid #CDCFD1;
     box-shadow: 0px 4px 13px 0px rgba(0, 0, 0, 0.2);
 }
 
@@ -340,93 +352,171 @@ section.portfolio {
     margin-right: auto;
     margin-top: 60px;
 }
-
+section.skills {
+    background: #fff;
+    padding: 50px 30px;
+    box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.5);
+    margin-bottom: 60px;
+}
 section.skills > h2,
 section.message > h2,
-section.portfolio > h2 {
+section.portfolio > h2,
+section.myPortfolio .section_header_title {
     color: #3d4451;
     font-size: 34px;
     line-height: 1.2;
     font-weight: 600;
     text-align: center;
 }
-
-section.skills h3 {
-    font-size: 14px;
-    line-height: 1.1;
-    padding-right: 40px;
+section.skills .tech-stack > h3 {
+    font-size: 19px;
+    color: #574ABB;
+    margin: 0 0 15px 5px;
+    font-weight:bold;
 }
-
-section.skills > ol {
-    background: white;
-    box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.5);
-    padding: 42px 50px 10px;
-    margin-top: 30px;
+section.skills .tech-stack  h4 {
+    line-height: 30px;
+    font-size: 18px;
+    font-weight:bold;
+    bottom: 3px;
+    color: #000;
 }
-
-section.skills > ol > li {
-    float: left;
-    width: 48%;
-    box-sizing: border-box;
+section.skills .tech-stack > ul {
+    border-left: 2px solid #7E6EFC;
+    margin-left: 15px;
 }
-
-section.skills > ol > li:nth-child(even) {
-    float: right;
+section.skills .tech-stack > ul > li {
+    position: relative;
+    top: -5px;
+    margin: 0 0 20px 20px;
 }
-
-section.skills .progressBar {
-    height: 5px;
-    background: #FAE1E1;
-    border-radius: 2px;
-    margin: 4px 0 40px 0;
-    overflow: hidden;
-}
-
-section.skills .progressBar > .progress {
-    height: 100%;
+.circle {
+    height: 14px;
+    width: 14px;
+    -webkit-border-radius: 100%;
+    border-radius: 100%;
     background: #7E6EFC;
-    width: 70%;
-    border-radius: 2px;
-    transform: translateX(0);
-    transition: all 1s;
+    float: left;
+    position: absolute;
+    left: -28px;
+    top: 5px;
 }
 
-section.skills.offset .progress {
-    transform: translateX(-100%);
+
+
+section.myPortfolio {
+    background: #fafafa;
+    padding: 60px 0 60px 0;
+}
+section.myPortfolio .boundary {
+    clear:both;
 }
 
-section.portfolio {
-    text-align: center;
-    margin-bottom: 100px;
-    max-width: 1200px;
+.myPortfolio .section_header {
+    text-shadow: 1px 1px 0 #fff;
+    line-height: 1.4;
 }
-
-section.portfolio h2 {
-    margin-bottom: 32px;
+section.myPortfolio .section_header_title {
+    margin-bottom:32px;
 }
-
-section.portfolio .swiper-container {
-    width: 668px;
-    height: 501px;
+section.myPortfolio .project {
+    border-top: 2px dashed #ccc;
 }
-
-section.portfolio .swiper-button-prev,
-section.portfolio .swiper-button-next {
-    background-color: white;
-    width: 64px;
-    height: 64px;
-    right: 100%;
-    left: auto;
-    border-radius: 50%;
+section.myPortfolio .project_intro_header {
+    position: relative;
+    margin-bottom: 8px;
+    line-height: 1.3;
 }
-
-section.portfolio .swiper-button-next {
-
-    left: 100%;
-    right: auto;
-
+section.myPortfolio .project_intro_header_title {
+    font-size: 1.2em;
+    font-weight: bold;
 }
+section.myPortfolio .project_intro_header_title > span {
+    font-size: 16px;
+    font-style: italic;
+}
+section.myPortfolio .project_intro_header_content {
+    line-height: 1.7;
+    text-align: justify;
+}
+section.myPortfolio .project_intro_header_content > ul {
+    list-style: inherit;
+    margin-left: 1.3em;
+}
+section.myPortfolio .tech-tag-list_item {
+    height: 24px;
+    line-height: 24px;
+    padding: 0 6px;
+    border-radius: 3px;
+    display: inline-block;
+    vertical-align: middle;
+    font-size: 0.75em;
+    font-family: 'Lucida Grande', arial;
+    color: #fff;
+}
+section.myPortfolio .project_intro_links {
+    margin-top: 10px;
+    text-align: right;
+    word-spacing: 1em;
+}
+section.myPortfolio .project_intro_links > a,
+section.myPortfolio .project_intro_links > a:visited {
+    color: #08c;
+}
+section.myPortfolio .project_intro_links > a:hover {
+    text-decoration: underline;
+}
+.tech-tag-list_item-html {
+    background: #f60;
+}
+.tech-tag-list_item-css {
+    background: #f90;
+}
+.tech-tag-list_item-javascript {
+    background: #ffda3f;
+    color: #333 !important;
+}
+.tech-tag-list_item-nodejs {
+    background: #80bd01;
+}
+.tech-tag-list_item-jQuery {
+    background: #015a84;
+}
+@media (min-width: 750px) {
+    .section .boundary {
+        padding: 50px 0;
+    }
+    section.myPortfolio .project_intro {
+        width: 100%;
+        float: left;
+    }
+    section.myPortfolio .project_intro_header_title {
+        padding-bottom: 3px;
+    }
 
+    .project_thumb {
+        float: right;
+        background: #eee;
+    }
+}
+@media (min-width: 960px) {
+    .project {
+        margin-top: 25px;
+        padding-top: 35px;
+        padding-left: 10px;
+        padding-right: 380px;
+    }
+    .project_thumb {
+        width: 320px;
+        margin-right: -370px;
+    }
+}
+@media (min-width: 1040px) {
+    .boundary {
+        max-width: 940px;
+        margin: 0 auto;
+    }
+}
 section.message > ol {
     max-width: 700px;
     margin: 0 auto;
