--- a/css/print.css
+++ b/css/print.css
@@ -29,6 +29,10 @@ section.myPortfolio .project_intro_links {
     margin-top: 5px;
     text-align: center;
 }
+section.skills .tech-stack > ul {
+    border-left: none;
+    margin-left: 0;
+}
 /*打印时显示的*/
 .personal-info-print {
     display: block;
