--- a/css/print.css
+++ b/css/print.css
@@ -10,8 +10,9 @@ body > main {
 }
 section.myPortfolio {
     padding:0;
-    margin:0 0 20px 0;
+    margin:0 0 0px 0;
 }
+
 section.skills,
 section.portfolio {
     margin:0;
@@ -39,6 +40,13 @@ section.skills .tech-stack > ul {
 section.skills {
     box-shadow: none;
 }
+/*字体排版设置*/
+section.skills .tech-stack > ul > li li {
+    font-size: 14px;
+}
+/*section.skills .tech-stack h4 {*/
+    /*line-height: 1.1;*/
+/*}*/
 /*打印时显示的*/
 .personal-info-print {
     display: block;
