--- a/css/main.less
+++ b/css/main.less
@@ -344,79 +344,90 @@ section.myPortfolio {
   background: #fafafa;
   padding: 60px 0 60px 0;
 }
+
+
 .boundary {
   clear: both;
   padding: 50px 0;
   width: 940px;
   margin: 0 auto;
+  .section_header {
+    text-shadow: 1px 1px 0 #fff;
+    line-height: 1.4;
+    .section_header_title {
+      margin-bottom: 32px;
+    }
+  }
+  .section_body {
+    .project {
+      border-top: 2px dashed #ccc;
+      display: flex;
+      justify-content: space-between;
+      margin-top: 25px;
+      padding-top: 35px;
+      .project_intro {
+        width: 60%;
+        padding:0 10px 0 0;
+        .project_intro_header {
+          position: relative;
+          margin-bottom: 8px;
+          line-height: 1.3;
+          .project_intro_header_title {
+            font-size: 1.2em;
+            font-weight: bold;
+            padding-bottom: 3px;
+            span {
+              font-size: 16px;
+              font-style: italic;
+            }
+          }
+          .tech-tag-list {
+            .tech-tag-list_item {
+              height: 24px;
+              line-height: 24px;
+              padding: 0 6px;
+              border-radius: 3px;
+              display: inline-block;
+              vertical-align: middle;
+              font-size: 0.75em;
+              font-family: 'Lucida Grande', arial;
+              color: #fff;
+            }
+
+          }
+        }
+        .project_intro_header_content {
+          line-height: 1.7;
+          text-align: justify;
+          ul {
+            list-style: inherit;
+            margin-left: 1.3em;
+          }
+          .project_intro_links {
+            margin-top: 10px;
+            text-align: right;
+            word-spacing: 1em;
+          }
+          .project_intro_links > a,
+          .project_intro_links > a:visited {
+            color: #08c;
+          }
+          .project_intro_links > a:hover {
+            text-decoration: underline;
+          }
+        }
+      }
+      .project_thumb {
+        background: #eee;
+        //width: 320px;
+        width:38%;
+      }
+    }
+
+  }
 }
-.boundary .section_header {
-  text-shadow: 1px 1px 0 #fff;
-  line-height: 1.4;
-}
-.boundary .section_header .section_header_title {
-  margin-bottom: 32px;
-}
-.boundary .section_body .project {
-  border-top: 2px dashed #ccc;
-  display: flex;
-  justify-content: space-between;
-  margin-top: 25px;
-  padding-top: 35px;
-}
-.boundary .section_body .project .project_intro {
-  width: 60%;
-  padding: 0 10px 0 0;
-}
-.boundary .section_body .project .project_intro .project_intro_header {
-  position: relative;
-  margin-bottom: 8px;
-  line-height: 1.3;
-}
-.boundary .section_body .project .project_intro .project_intro_header .project_intro_header_title {
-  font-size: 1.2em;
-  font-weight: bold;
-  padding-bottom: 3px;
-}
-.boundary .section_body .project .project_intro .project_intro_header .project_intro_header_title span {
-  font-size: 16px;
-  font-style: italic;
-}
-.boundary .section_body .project .project_intro .project_intro_header .tech-tag-list .tech-tag-list_item {
-  height: 24px;
-  line-height: 24px;
-  padding: 0 6px;
-  border-radius: 3px;
-  display: inline-block;
-  vertical-align: middle;
-  font-size: 0.75em;
-  font-family: 'Lucida Grande', arial;
-  color: #fff;
-}
-.boundary .section_body .project .project_intro .project_intro_header_content {
-  line-height: 1.7;
-  text-align: justify;
-}
-.boundary .section_body .project .project_intro .project_intro_header_content ul {
-  list-style: inherit;
-  margin-left: 1.3em;
-}
-.boundary .section_body .project .project_intro .project_intro_header_content .project_intro_links {
-  margin-top: 10px;
-  text-align: right;
-  word-spacing: 1em;
-}
-.boundary .section_body .project .project_intro .project_intro_header_content .project_intro_links > a,
-.boundary .section_body .project .project_intro .project_intro_header_content .project_intro_links > a:visited {
-  color: #08c;
-}
-.boundary .section_body .project .project_intro .project_intro_header_content .project_intro_links > a:hover {
-  text-decoration: underline;
-}
-.boundary .section_body .project .project_thumb {
-  background: #eee;
-  width: 38%;
-}
+
+
 section.message > ol {
   max-width: 700px;
   margin: 0 auto;
