--- a/css/print.css
+++ b/css/print.css
@@ -29,10 +29,10 @@ section.myPortfolio .section_header_title {
 section.myPortfolio .project {
     padding:5px 0 0 0;
 }
-section.myPortfolio .project_intro_links {
-    margin-top: 5px;
-    text-align: center;
-}
+/*section.myPortfolio .project_intro_links {*/
+    /*margin-top: 5px;*/
+    /*text-align: center;*/
+/*}*/
 section.skills .tech-stack > ul {
     border-left: none;
     margin-left: 0;
@@ -50,4 +50,15 @@ section.skills .tech-stack > ul > li li {
 /*打印时显示的*/
 .personal-info-print {
     display: block;
+    position:relative;
+}
+/*.project_thumb {*/
+    /*width: 320px;*/
+    /*margin-right: -370px;*/
+/*}*/
+.online-resume {
+    position:absolute;
+    top: 0;
+    right: 0;
+
 }
