--- a/css/main.css
+++ b/css/main.css
@@ -280,7 +280,8 @@ body > main {
   /* font-weight: bold; */
 }
 section.skills,
-section.portfolio {
+section.portfolio,
+section.experience {
   max-width: 940px;
   margin-left: auto;
   margin-right: auto;
@@ -290,9 +291,10 @@ section.skills {
   background: #fff;
   padding: 50px 30px;
   box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.5);
-  margin-bottom: 60px;
 }
+
 section.skills > h2,
+section.experience > h2,
 section.message > h2,
 section.portfolio > h2,
 section.myPortfolio .section_header_title {
@@ -339,6 +341,15 @@ section.skills .tech-stack > ul > li li {
   position: absolute;
   left: -28px;
   top: 5px;
+}
+section.experience {
+  padding: 50px 30px;
+  margin-bottom: 60px;
+  margin-top: 0px;
+}
+section.experience > p {
+  padding-top:30px;
+  line-height:1.7;
 }
 section.myPortfolio {
   background: #fafafa;
